[package]
name = "mkv-audio-extractor"
version = "0.1.0"
authors = ["Dermot McEneaney <dermot.mceneaney@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.1.4"
fltk-theme = "0.1"

[build-dependencies]
fl2rust = "0.4"
